--- a/index.html
+++ b/index.html
@@ -32,7 +32,36 @@
       </div>
     </header>
     <!-- end of header  -->
-
+    <section class="section" id="about">
+      <!-- title -->
+      <div class="section-title">
+        <h2>about <span>us</span></h2>
+      </div>
+      <!-- end of title -->
+      <div class="section-center about-center">
+        <!-- about img wrapper -->
+        <article class="about-img">
+          <img
+            src="./images/about.jpeg"
+            class="about-photo"
+            alt="awesome beach"
+          />
+        </article>
+        <!-- about info -->
+        <article class="about-info">
+          <h3>explore the difference</h3>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis error
+            ad explicabo deserunt id aliquid aut excepturi labore ab rem!
+          </p>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis error
+            ad explicabo deserunt id aliquid aut excepturi labore ab rem!
+          </p>
+          <a href="#" class="btn">read more</a>
+        </article>
+      </div>
+    </section>
     <!-- about section -->
 
     <!-- end of about section -->
