--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       </div>
     </header>
     <!-- end of header  -->
+    <!-- about section -->
     <section class="section" id="about">
       <!-- title -->
       <div class="section-title">
@@ -62,11 +63,54 @@
         </article>
       </div>
     </section>
-    <!-- about section -->
-
     <!-- end of about section -->
 
     <!-- services -->
+    <section class="section services" id="services">
+      <div class="section-title">
+        <h2>our <span>services</span></h2>
+      </div>
+      <div class="services-center section-center">
+        <!-- single service -->
+        <article class="service">
+          <span class="service-icon">
+            <i class="fas fa-wallet fa-fw"></i>
+          </span>
+          <div class="service-info">
+            <h4 class="service-title">saving money</h4>
+            <p class="service-text">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+              fuga ut labore dolores soluta optio?
+            </p>
+          </div>
+        </article>
+        <article class="service">
+          <span class="service-icon">
+            <i class="fas fa-tree fa-fw"></i>
+          </span>
+          <div class="service-info">
+            <h4 class="service-title">endless biking</h4>
+            <p class="service-text">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+              fuga ut labore dolores soluta optio?
+            </p>
+          </div>
+        </article>
+        <article class="service">
+          <span class="service-icon">
+            <i class="fas fa-socks fa-fw"></i>
+          </span>
+          <div class="service-info">
+            <h4 class="service-title">amazing comfort</h4>
+            <p class="service-text">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+              fuga ut labore dolores soluta optio?
+            </p>
+          </div>
+        </article>
+        <!-- end of single service -->
+      </div>
+    </section>
     <!--end services -->
 
     <!-- featured tours -->
