--- a/index.html
+++ b/index.html
@@ -114,6 +114,99 @@
     <!--end services -->
 
     <!-- featured tours -->
+    <section class="section" id="fetured">
+      <div class="section-title">
+        <h2>our <span>Tours</span></h2>
+      </div>
+      <!-- featured-center -->
+      <div class="section-center featured-center">
+        <!-- single tour -->
+        <article class="tour-card">
+          <div class="tour-img-container">
+            <img class="tour-img" src="./images/tour-1.jpeg" alt="" />
+            <p class="tour-date">august 26th, 2020</p>
+          </div>
+          <div class="tour-info">
+            <h4>tibet adventure</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi id
+              cumque quisquam aut quasi autem!
+            </p>
+            <div class="tour-footer">
+              <p>
+                <span><i class="fas fa-map"></i> China</span>
+              </p>
+              <p>6 days</p>
+              <p>from $2100</p>
+            </div>
+          </div>
+        </article>
+        <article class="tour-card">
+          <div class="tour-img-container">
+            <img class="tour-img" src="./images/tour-2.jpeg" alt="" />
+            <p class="tour-date">october 1st, 2020</p>
+          </div>
+          <div class="tour-info">
+            <h4>best of java</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi id
+              cumque quisquam aut quasi autem!
+            </p>
+            <div class="tour-footer">
+              <p>
+                <span><i class="fas fa-map"></i> indonesia</span>
+              </p>
+              <p>11 days</p>
+              <p>from $1400</p>
+            </div>
+          </div>
+        </article>
+        <article class="tour-card">
+          <div class="tour-img-container">
+            <img class="tour-img" src="./images/tour-3.jpeg" alt="" />
+            <p class="tour-date">september 15th, 2020</p>
+          </div>
+          <div class="tour-info">
+            <h4>explore hong kong</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi id
+              cumque quisquam aut quasi autem!
+            </p>
+            <div class="tour-footer">
+              <p>
+                <span><i class="fas fa-map"></i> hong kong</span>
+              </p>
+              <p>8 days</p>
+              <p>from $5000</p>
+            </div>
+          </div>
+        </article>
+        <article class="tour-card">
+          <div class="tour-img-container">
+            <img class="tour-img" src="./images/tour-4.jpeg" alt="" />
+            <p class="tour-date">september 15th, 2020</p>
+          </div>
+          <div class="tour-info">
+            <h4>explore vietnam</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi id
+              cumque quisquam aut quasi autem!
+            </p>
+            <div class="tour-footer">
+              <p>
+                <span><i class="fas fa-map"></i> vietnam</span>
+              </p>
+              <p>8 days</p>
+              <p>from $5000</p>
+            </div>
+          </div>
+        </article>
+        <!-- end of single tour -->
+      </div>
+      <div class="tour-btn">
+        <a href="#" class="btn">all tours</a>
+      </div>
+    </section>
     <!-- end of featured tours -->
 
     <!-- contact -->
