--- a/index.html
+++ b/index.html
@@ -210,7 +210,26 @@
     <!-- end of featured tours -->
 
     <!-- contact -->
-
+    <div class="section contact" id="contact">
+      <div class="section-center contact-center">
+        <!-- contact title -->
+        <article class="contact-title">
+          <h3>want latest tour info and updates</h3>
+          <p>Sign up for newsletter and stay up to date</p>
+        </article>
+        <!-- contact form -->
+        <form class="contact-form">
+          <input
+            type="email"
+            name="email"
+            class="form-control"
+            placeholder="your email"
+          />
+          <button type="submit" class="btn-submit">submit</button>
+        </form>
+        <!-- end of contact -->
+      </div>
+    </div>
     <!-- end of contact -->
 
     <!-- gallery  -->
