--- a/index.html
+++ b/index.html
@@ -19,6 +19,56 @@
     <!-- header  -->
     <header id="home">
       <!-- navbar -->
+      <nav class="navbar">
+        <div class="nav-center">
+          <!-- nav header -->
+          <div class="nav-header">
+            <img src="./images/logo.svg" class="nav-logo" alt="" />
+            <button class="nav-toggle" id="nav-toggle">
+              <i class="fas fa-bars"></i>
+            </button>
+          </div>
+          <!-- end of nav header -->
+          <ul class="nav-links show-links" id="nav-links">
+            <!-- nav links -->
+            <li>
+              <a href="#home" class="nav-link scroll-link">home</a>
+            </li>
+            <li>
+              <a href="#about" class="nav-link scroll-link">about</a>
+            </li>
+            <li>
+              <a href="#services" class="nav-link scroll-link">services</a>
+            </li>
+            <li>
+              <a href="#featured" class="nav-link scroll-link">featured</a>
+            </li>
+            <li>
+              <a href="#gallery" class="nav-link scroll-link">gallery</a>
+            </li>
+            <!-- end of nav links -->
+          </ul>
+          <ul class="nav-icons">
+            <!-- single icon -->
+            <li>
+              <a href="https://twitter.com" target="_blank" class="nav-icon">
+                <i class="fab fa-facebook"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://twitter.com" target="_blank" class="nav-icon">
+                <i class="fab fa-twitter"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://twitter.com" target="_blank" class="nav-icon">
+                <i class="fab fa-squarespace"></i>
+              </a>
+            </li>
+            <!-- end of single icon -->
+          </ul>
+        </div>
+      </nav>
       <!-- hero -->
       <div class="hero">
         <div class="hero-banner">
@@ -114,7 +164,7 @@
     <!--end services -->
 
     <!-- featured tours -->
-    <section class="section" id="fetured">
+    <section class="section" id="featured">
       <div class="section-title">
         <h2>our <span>Tours</span></h2>
       </div>
@@ -290,7 +340,53 @@
     <!-- end of gallery  -->
 
     <!-- footer -->
-
+    <footer class="section footer">
+      <!-- footer links -->
+      <ul class="footer-links">
+        <!-- single links -->
+        <li>
+          <a href="#home" class="footer-link scroll-link">home</a>
+        </li>
+        <li>
+          <a href="#about" class="footer-link scroll-link">about</a>
+        </li>
+        <li>
+          <a href="#services" class="footer-link scroll-link">services</a>
+        </li>
+        <li>
+          <a href="#featured" class="footer-link scroll-link">featured</a>
+        </li>
+        <li>
+          <a href="#gallery" class="footer-link scroll-link">gallery</a>
+        </li>
+        <!-- end of single links -->
+      </ul>
+      <!-- footer icon -->
+      <ul class="footer-icons">
+        <!-- single icon -->
+        <li>
+          <a href="https://twitter.com" target="_blank" class="footer-icon">
+            <i class="fab fa-facebook"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://twitter.com" target="_blank" class="footer-icon">
+            <i class="fab fa-twitter"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://twitter.com" target="_blank" class="footer-icon">
+            <i class="fab fa-squarespace"></i>
+          </a>
+        </li>
+        <!-- end of single icon -->
+      </ul>
+      <!-- end of footer icon -->
+      <p class="copyright">
+        copyright &copy; backroads travel tour company
+        <span id="date"></span>. all rights reserved
+      </p>
+    </footer>
     <!-- js -->
     <script src="./js/app.js"></script>
   </body>
